fix: set table name width to now hide icons when name is too long

--- a/superset-frontend/src/SqlLab/main.less
+++ b/superset-frontend/src/SqlLab/main.less
@@ -421,6 +421,7 @@ div.tablePopover {
       text-overflow: ellipsis;
       font-size: 16px;
       flex: 1;
+      width: 50px;
     }
 
     .header-right-side {
